tests/ui/async-await/async-fn/not-a-trait.stderr
error[E0404]: expected trait, found struct `S`
  --> $DIR/not-a-trait.rs:7:23
   |
LL | fn test(x: impl async S) {}
   |                       ^ not a trait

error[E0405]: cannot find trait `Missing` in this scope
  --> $DIR/not-a-trait.rs:10:26
   |
LL | fn missing(x: impl async Missing) {}
   |                          ^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0404, E0405.
For more information about an error, try `rustc --explain E0404`.
